--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
 <body>
   <!-- Main Content  -->
-  <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+  <main class="max-w-screen-xl mx-auto px-5 md:px-16 lg:px-28">
     <!-- Header Section  -->
-    <header class="flex p-10 mb-20">
+    <header class="lg:flex p-10 md:mb-20">
       <!-- Text Content  -->
       <div>
         <h1 class="text-5xl md:text-7xl ">It's good <br>tea time at The <br>Tea House</h1>
         <br>
-        <p class="text-gray-500 w-3/4">
+        <p class="text-gray-500 w-3/4 mb-5">
           Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
         </p>
-        <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
+        <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold mb-5">Explore More <i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
       </div>
       <!-- image content  -->
       <div class="relative">
@@ -60,7 +60,46 @@
           </div>
       </div>
     </header>
-
+    <!-- Feature Section  -->
+     <section class="py-8 lg:py-24 ">
+      <!-- title  -->
+      <div class="text-center mb-8">
+        <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+        <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      </div>
+      <!-- Grid Cards  -->
+       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
+        <!-- card  -->
+         <div class="rounded-lg shadow-md bg-green-50 overflow-hidden ">
+          <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
+          <div class="p-4">
+            <h2 class="font-bold text-xl">Milk Tea</h2>
+            <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+          </div>
+         </div>
+         <div class="rounded-lg shadow-md bg-green-50 overflow-hidden ">
+          <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
+          <div class="p-4">
+            <h2 class="font-bold text-xl">Black Tea</h2>
+            <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+          </div>
+         </div>
+         <div class="rounded-lg shadow-md bg-green-50 overflow-hidden ">
+          <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
+          <div class="p-4">
+            <h2 class="font-bold text-xl">Lemon Tea</h2>
+            <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+          </div>
+         </div>
+         <div class="rounded-lg shadow-md bg-green-50 overflow-hidden ">
+          <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
+          <div class="p-4">
+            <h2 class="font-bold text-xl">Green Tea</h2>
+            <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+          </div>
+         </div>
+       </div>
+     </section>
   </main>
 </body>
 
